Setup auth db
